--- a/pages/coupon/couponReceive.wxml
+++ b/pages/coupon/couponReceive.wxml
@@ -1,32 +1,45 @@
 <!--pages/coupon/couponReceive.wxml-->
 <view class='container'>
-  <block>
-    <view class='coupon-box'>
+  <view class='loading' wx:if="{{loading}}">加载中...</view>
+  <block wx:if="{{!loading && couponData.length}}" wx:for="{{couponData}}" wx:for-item="item" wx:key="{{index}}">
+    <view class='{{item.receivedStatus?"coupon-box":"coupon-box grey"}}'>
       <view class='box-l'>
-        <view class='l1'>老会员双十一预热专享优惠券</view>
-        <view class='l2'>代金券</view>
-        <view class='l3'>50<text class='unit'>元</text></view>
-        <view class='l4'>无使用门槛</view>
+        <view class='l1'>{{item.couponName}}</view>
+        <view class='l2'>{{item.couponType?"折扣券":"代金券"}}</view>
+        <view class='l3'>{{item.couponType?item.conponRate*100:item.conponRate}}
+          <text class='unit'>{{item.couponType?"折":"元"}}</text>
+        </view>
+        <view wx:if="{{item.couponCondition!='0'}}" class='l4'>满{{item.couponCondition}}元可用</view>
+        <view wx:else class='l4'>无使用门槛</view>
+        <image wx:if="{{!item.receivedStatus}}" class='img' src='../../static/images/finished.png'></image>
       </view>
-      <view class='box-r'>
+      <view class='box-r' wx:if="{{item.overdueType}}">
         <view class='r1'>有效期</view>
-        <view class='r2'>2018-10-25</view>
+        <view class='r2'>{{item.startTime}}</view>
         <view class='r3'>至</view>
-        <view class='r4'>2018-10-25</view>
+        <view class='r4'>{{item.overdueTime}}</view>
         <button open-type="getUserInfo" bindgetuserinfo="getUserInfo" wx:if="{{!userInfo}}" class='r5'>立即领取</button>
-        <view wx:else class='r5' bindtap='receive'>立即领取</view>
+        <view wx:else class='r5' data-item='{{item}}' bindtap='receive'>立即领取</view>
+      </view>
+      <view class='box-r' wx:else>
+        <view class='r1'>有效期</view>
+        <view class='r2'>自领取之日起</view>
+        <view class='r3'><text class='orange'>第{{item.receivedEffectDay}}天 生效</text></view>
+        <view class='r4'>有效期 <text class='orange'>{{item.effectDay}}</text> 天</view>
+        <button open-type="getUserInfo" bindgetuserinfo="getUserInfo" wx:if="{{!userInfo}}" class='r5'>立即领取</button>
+        <view wx:else class='r5' data-item='{{item}}' bindtap="receive">立即领取</view>
       </view>
     </view>
-    <view class='coupon-tips'>
+    <view class='{{item.receivedStatus?"coupon-tips":"coupon-tips grey"}}'>
       <view class='txt'>使用须知：</view>
-      <view class='txt'>每人限领取 1 张</view>
+      <view class='txt'>每人限领取 {{item.receiveNum}} 张</view>
       <view class='txt'>不可与其他优惠同时使用</view>
-      <view class='txt'>适用全品类产品</view>
-      <view class='txt'>仅限累计消费满30000元的老会员领取</view>
+      <!-- <view class='txt'>适用全品类产品</view> -->
+      <view class='txt'>{{item.couponDesc}}</view>
     </view>
   </block>
 
-  <block>
+  <!-- <block>
     <view class='coupon-box'>
       <view class='box-l'>
         <view class='l1'>女神节大金春特别活动专享优惠券</view>
@@ -50,9 +63,9 @@
       <view class='txt'>适用全品类产品</view>
       <view class='txt'>仅限累计消费满30000元的老会员领取</view>
     </view>
-  </block>
+  </block> -->
 
-  <block>
+  <!-- <block>
     <view class='coupon-box grey'>
       <view class='box-l'>
         <view class='l1'>双十一·特赏大典活动专属优惠券</view>
@@ -77,5 +90,5 @@
       <view class='txt'>适用全品类产品</view>
       <view class='txt'>仅限累计消费满30000元的老会员领取</view>
     </view>
-  </block>
+  </block> -->
 </view>
