--- a/pages/myCoupon/myCoupon.wxml
+++ b/pages/myCoupon/myCoupon.wxml
@@ -4,50 +4,40 @@
       <text class='top-text {{item.active?"active":""}}'>{{item.mean}}</text>
     </view>
   </view>
-  <view class="mtx">
-    <view class='coupon-box'>
-      <view class='box-l'>
-        <view class='l1'>老会员双十一预热专享优惠券</view>
-        <view class='l2'><text class='type'>代金券</text><text class='couponId'>1509070490</text></view>
-        <view class='l3'>50<text class='unit'>元</text></view>
-        <view class='l4'>无使用门槛</view>
+  <view class="loading" wx:if="{{loading}}">加载中...</view>
+  <view wx:elif="{{!couponData.length}}">
+    <image class='empty' src='../../static/images/no_coupon.png'></image>
+    <view wx:if="{{TOP_MENU[0].active}}" class='empty-txt'>暂无可用的优惠券</view>
+    <view wx:else class='empty-txt'>暂无数据</view>
+  </view>
+  <view class="mtx" wx:if="{{!loading && couponData.length}}">
+    <block wx:for="{{couponData}}" wx:for-item="item" wx:key="{{index}}">
+      <view class='coupon-box'>
+        <view class='box-l'>
+          <view class='l1'>{{item.couponName}}</view>
+          <view class='l2'>
+            <text class='type'>{{item.couponType?"折扣券":"代金券"}}</text>
+            <text class='couponId'>{{customerInfo.phoneNumber}}</text>
+          </view>
+          <view class='l3'>{{item.couponType?item.conponRate*100:item.conponRate}}
+            <text class='unit'>{{item.couponType?"折":"元"}}</text>
+          </view>
+          <view wx:if="{{item.couponCondition!='0'}}" class='l4'>满{{item.couponCondition}}元可用</view>
+          <view wx:else class='l4'>无使用门槛</view>
+        </view>
+        <view class='box-r'>
+          <view class='r1'>有效期</view>
+          <view class='r2'>{{item.startTime}}</view>
+          <view class='r3'>至</view>
+          <view class='r4'>{{item.endTime}}</view>
+        </view>
       </view>
-      <view class='box-r'>
-        <view class='r1'>有效期</view>
-        <view class='r2'>2018-10-25</view>
-        <view class='r3'>至</view>
-        <view class='r4'>2018-10-25</view>
-        <!-- <view class='r5' bindtap='receive'>立即领取</view> -->
+      <view class='coupon-tips'>
+        <view class='txt'>使用须知：</view>
+        <view class='txt'>每人限领取 {{item.receiveNum}} 张</view>
+        <view class='txt'>不可与其他优惠同时使用</view>
+        <view class='txt'>{{item.couponDesc}}</view>
       </view>
-    </view>
-    <view class='coupon-tips'>
-      <view class='txt'>使用须知：</view>
-      <view class='txt'>每人限领取 1 张</view>
-      <view class='txt'>不可与其他优惠同时使用</view>
-      <view class='txt'>适用全品类产品</view>
-      <view class='txt'>仅限累计消费满30000元的老会员领取</view>
-    </view>
-    <view class='coupon-box'>
-      <view class='box-l'>
-        <view class='l1'>老会员双十一预热专享优惠券</view>
-        <view class='l2'><text class='type'>代金券</text><text class='couponId'>1509070490</text></view>
-        <view class='l3'>50<text class='unit'>元</text></view>
-        <view class='l4'>无使用门槛</view>
-      </view>
-      <view class='box-r'>
-        <view class='r1'>有效期</view>
-        <view class='r2'>2018-10-25</view>
-        <view class='r3'>至</view>
-        <view class='r4'>2018-10-25</view>
-        <!-- <view class='r5' bindtap='receive'>立即领取</view> -->
-      </view>
-    </view>
-    <view class='coupon-tips'>
-      <view class='txt'>使用须知：</view>
-      <view class='txt'>每人限领取 1 张</view>
-      <view class='txt'>不可与其他优惠同时使用</view>
-      <view class='txt'>适用全品类产品</view>
-      <view class='txt'>仅限累计消费满30000元的老会员领取</view>
-    </view>
+    </block>
   </view>
 </view>
