--- a/pages/coupon/couponReceive.wxml
+++ b/pages/coupon/couponReceive.wxml
@@ -13,7 +13,7 @@
         <view wx:else class='l4'>无使用门槛</view>
         <image wx:if="{{!item.receivedStatus}}" class='img' src='../../static/images/finished.png'></image>
       </view>
-      <view class='box-r' wx:if="{{item.overdueType}}">
+      <view class='box-r' wx:if="{{item.overdueType=='1'}}">
         <view class='r1'>有效期</view>
         <view class='r2'>{{item.startTime}}</view>
         <view class='r3'>至</view>
