--- a/pages/coupon/couponReceive.wxml
+++ b/pages/coupon/couponReceive.wxml
@@ -1,4 +1,14 @@
-<!--pages/coupon/couponReceive.wxml-->
+<wxs module="filters">
+  var filters = {
+    toFix: function(value) {
+    return value.toFixed(1) //此处2为保留两位小数
+  }
+  }
+  module.exports = {
+    toFix: filters.toFix
+  }
+</wxs>
+
 <view class='container'>
   <view class='loading' wx:if="{{loading}}">加载中...</view>
   <block wx:if="{{!loading && couponData.length}}" wx:for="{{couponData}}" wx:for-item="item" wx:key="{{index}}">
@@ -6,7 +16,7 @@
       <view class='box-l'>
         <view class='l1'>{{item.couponName}}</view>
         <view class='l2'>{{item.couponType?"折扣券":"代金券"}}</view>
-        <view class='l3'>{{item.couponType?item.conponRate*100:item.conponRate}}
+        <view class='l3'>{{item.couponType?filters.toFix(item.conponRate*10):item.conponRate}}
           <text class='unit'>{{item.couponType?"折":"元"}}</text>
         </view>
         <view wx:if="{{item.couponCondition!='0'}}" class='l4'>满{{item.couponCondition}}元可用</view>
@@ -24,7 +34,10 @@
       <view class='box-r' wx:else>
         <view class='r1'>有效期</view>
         <view class='r2'>自领取之日起</view>
-        <view class='r3'><text class='orange'>第{{item.receivedEffectDay}}天 生效</text></view>
+        <view class='r3'>
+          <text wx:if="{{item.receivedEffectDay}}" class='orange'>第{{item.receivedEffectDay}}天 生效</text>
+          <text wx:else class='orange'>立即生效</text>
+        </view>
         <view class='r4'>有效期 <text class='orange'>{{item.effectDay}}</text> 天</view>
         <button open-type="getUserInfo" bindgetuserinfo="getUserInfo" wx:if="{{!userInfo}}" class='r5'>立即领取</button>
         <view wx:else class='r5' data-item='{{item}}' bindtap="receive">立即领取</view>
