--- a/pages/coupon/couponReceive.wxml
+++ b/pages/coupon/couponReceive.wxml
@@ -46,7 +46,7 @@
     <view class='{{item.receivedStatus?"coupon-tips":"coupon-tips grey"}}'>
       <view class='txt'>使用须知：</view>
       <view class='txt'>每人限领取 {{item.receiveNum}} 张</view>
-      <view class='txt'>不可与其他优惠同时使用</view>
+      <!-- <view class='txt'>不可与其他优惠同时使用</view> -->
       <!-- <view class='txt'>适用全品类产品</view> -->
       <view class='txt'>{{item.couponDesc}}</view>
     </view>
