--- a/pages/myCoupon/myCoupon.wxml
+++ b/pages/myCoupon/myCoupon.wxml
@@ -48,7 +48,7 @@
       <view class='{{TOP_MENU[0].active?"coupon-tips":"coupon-tips grey"}}'>
         <view class='txt'>使用须知：</view>
         <view class='txt'>每人限领取 {{item.receiveNum}} 张</view>
-        <view class='txt'>不可与其他优惠同时使用</view>
+        <!-- <view class='txt'>不可与其他优惠同时使用</view> -->
         <view class='txt'>{{item.couponDesc}}</view>
       </view>
     </block>
