--- a/pages/myCoupon/myCoupon.wxss
+++ b/pages/myCoupon/myCoupon.wxss
@@ -158,7 +158,7 @@
   font-size: 28.96rpx;
   text-align: left;
   font-family: PingFangSC-regular;
-  margin-left: 39.82rpx;
+  /* margin-left: 39.82rpx; */
 }
 .box-r{
   text-align: center;
@@ -228,7 +228,16 @@
 .grey .l2{
   background-color: rgba(255, 255, 255, 0);
   color: rgba(185, 185, 185, 1);
+  /* border: 1.81rpx solid rgba(185, 185, 185, 1); */
+}
+.grey .l2 .type{
+  background-color: rgba(255, 255, 255, 0);
+  color: rgba(185, 185, 185, 1);
   border: 1.81rpx solid rgba(185, 185, 185, 1);
+}
+.grey .l2 .couponId{
+  background-color: rgba(255, 255, 255, 0);
+  color: rgba(185, 185, 185, 1);
 }
 .grey .l4{
   border: rgba(185, 185, 185, 1);
