--- a/pages/order/orderList.wxml
+++ b/pages/order/orderList.wxml
@@ -8,11 +8,11 @@
     <view class='order-c'>
       <view class='line'>
         <text class='line-l'>订单编号：</text>
-        <text class='line-r'>{{item.orderExternalId}}</text>
+        <text class='line-r'>{{item.orderId}}</text>
       </view>
       <view class='line'>
         <text class='line-l'>创建时间：</text>
-        <text class='line-r'>{{item.orderExternalId}}</text>
+        <text class='line-r'>{{item.orderedDate}}</text>
       </view>
       <view class='line'>
         <text class='line-l'>终端/店铺名称：</text>
@@ -20,7 +20,7 @@
       </view>
       <view class='line'>
         <text class='line-l'>优惠券码：</text>
-        <text class='line-r'>{{item.prouductName}}</text>
+        <text class='line-r'>{{item.couponId}}</text>
       </view>
       <view class='line'>
         <text class='line-l'>合计件数：</text>
@@ -29,7 +29,7 @@
       <view class='total'>实付款：{{item.orderAmount}}元</view>
     </view>
     <view class='order-b'>
-      <view class='{{recordTime || recordTime==""?"toComment":"hasComment"}}' bindtap='toComent' data-type="{{false}}" data-item="{{item}}">查看商品并评价</view>
+      <view class='{{recordTime || recordTime==""?"toComment":"hasComment"}}' bindtap='toCartItem' data-item="{{item}}">查看商品并评价</view>
     </view>
   </view>
   <view wx:if="{{!canload && orderData.length}}" class='loading'>{{canload?'':'没有更多了...'}}</view>
