--- a/pages/order/orderComment/orderComment.wxml
+++ b/pages/order/orderComment/orderComment.wxml
@@ -23,9 +23,9 @@
     </view>
   </view>
   <textarea wx:if="{{hasComment == 'true'}}" disabled='true' class='txta'>
-  {{commentData.evaluateText}}
+  {{item.evaluateText}}
   </textarea>
-  <textarea wx:else class='txta' placeholder='请输入文字评价'></textarea>
+  <textarea wx:else bindinput='inputTxt' class='txta' placeholder='请输入文字评价' value="{{commentValue}}">{{commentValue}}</textarea>
   <view wx:if="{{hasComment == 'false'}}" class='submit' bindtap='submit'>提 交</view>
   <view wx:else class='comment-time'>评价时间： {{item.creationDate}}</view>
 </view>
