--- a/pages/order/orderItem/orderItem.wxml
+++ b/pages/order/orderItem/orderItem.wxml
@@ -11,7 +11,7 @@
       </view>
       <view class='line'>
         <text class='line-l'>终端/店铺名称：</text>
-        <text class='line-r'>{{orderItem.orderSource}}</text>
+        <text class='line-r'>{{orderItem.terminalName}}</text>
       </view>
       <view class='line'>
         <text class='line-l'>优惠券码：</text>
