保存openid；保存昵称

--- a/pages/myCoupon/myCoupon.wxml
+++ b/pages/myCoupon/myCoupon.wxml
@@ -47,7 +47,8 @@
       </view>
       <view class='{{TOP_MENU[0].active?"coupon-tips":"coupon-tips grey"}}'>
         <view class='txt'>使用须知：</view>
-        <view class='txt'>每人限领取 {{item.receiveNum}} 张</view>
+        <view class='txt' wx:if="{{!item.receivedType}}">每人限领取 {{item.receiveNum}} 张</view>
+        <view class='txt' wx:else>该券由系统自动发放</view>
         <!-- <view class='txt'>不可与其他优惠同时使用</view> -->
         <view wx:for="{{item.couponDesc}}" wx:for-item="item" wx:key="{{index}}" class='txt'>{{item}}</view>
       </view>
