--- a/pages/user/addressEdit/addressEdit.wxss
+++ b/pages/user/addressEdit/addressEdit.wxss
@@ -1,3 +1,4 @@
+@import '../../temp/cascade.wxss';
 .container{
   background-color: #f8f8f8;
   width: 100%;
@@ -32,13 +33,13 @@
   width:65%;
 }
 .ads-v{
-  height: 36.2rpx;
-  color: rgba(16, 16, 16, 1);
-  font-size: 25.34rpx;
-  text-align: right;
-  font-family: PingFangSC-regular;
-  /* width: 90%; */
-  line-height: 36.2rpx;
+  height:90rpx;
+  color:rgba(16, 16, 16, 1);
+  font-size:25.34rpx;
+  text-align:right;
+  font-family:PingFangSC-regular;
+  line-height:90rpx;
+  width:90%;
 }
 .ads-detail{
   color:rgba(16, 16, 16, 1);
