售后文案修改

--- a/pages/service/service.wxml
+++ b/pages/service/service.wxml
@@ -5,10 +5,10 @@
       <text class='txt'>售后条款</text>
     </view>
     <view class='content'>
-      <view>· 倍轻松产品自购买之日起享受1年质保服务</view>
-      <view>· 产品购买时间在7天内可享受退换货服务</view>
-      <view>· 产品购买时间在15天内可享受换货服务</view>
-      <view>· 产品购买时间在1年内属产品功能性质量问题的 可享受1年质保服务</view>
+      <view class='mt30'>1、产品自出售之日，性能发生故障，您可在7天内凭产品有效保修卡或发票到原购买柜台/平台办理退/换货，退/换货时必须保证本产品未受人为外力损坏，确保外包装、说明等附件完好无损，并不影响二次销售；产品自出售之日起15天内，性能发生故障，您可以选择原购买柜台/平台办理换货或者返厂维修。</view>
+      <view class='mt30'>2、自商品购买之日起一年内，非人为损坏情况下，凭有效保修卡、购买凭证或发票可享受免费保修服务。（电池、外观、配件均不在保修范围内，快递费用免费，同时本公司不提供上门维修服务）。</view>
+      <view class='mt30'>3、保修期内及保外因客户使用、保管、维护不当造成的损坏；非倍轻松授权的维修人拆卸造成的损坏；无本公司产品保修卡或发票；因不可抗拒力造成损坏的。我司可提供维修服务，但需收取相应的配件及运输费用。</view>
+      <view class='mt30'>以上详情咨询可拨打下方电话</view>
     </view>
   </view>
   <view class='card'>
