--- a/pages/choiceCoupon/choiceCoupon.wxml
+++ b/pages/choiceCoupon/choiceCoupon.wxml
@@ -37,7 +37,7 @@
         <view class='r2'>{{item.startTime}}</view>
         <view class='r3'>至</view>
         <view class='r4'>{{item.overdueTime}}</view>
-        <button open-type="getUserInfo" bindgetuserinfo="getUserInfo" wx:if="{{!userInfo}}" class='r5'>立即领取</button>
+        <button open-type="getUserInfo" bindgetuserinfo="getUserInfo" wx:if="{{userInfo==''}}" class='r5'>立即领取</button>
         <!-- <view wx:else class='r5' data-item='{{item}}' bindtap='receive'>立即领取</view> -->
         <view wx:else>
           <form bindsubmit="formSubmit" report-submit='true'>
